--- a/ProjetoVidaPart/index.html
+++ b/ProjetoVidaPart/index.html
@@ -15,6 +15,27 @@
             <button class="botao">Conseguir um Emprego</button>
             <button class="botao">Comprar uma P. de video</button>
         </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar e atingir média 6</h3>
+                <h4 class="aba-conteudo-titulo-secundario">9 meses</h4>
+            </div>
+        </div>
+        <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Tirar CNH</h3>
+                <h4 class="aba-conteudo-titulo-secundario">18 meses</h4>
+            </div>
+        </div>
+        <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Conseguir um Emprego</h3>
+                <h4 class="aba-conteudo-titulo-secundario">12 meses</h4>
+            </div>
+        </div>
+        <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Comprar uma P. de video</h3>
+                <h4 class="aba-conteudo-titulo-secundario">20 meses</h4>
+            </div>
+        </div>
     </section>
     <script scr="main.js"></script>
 </body>
